fix: align the switch for the theme toggle

--- a/static/main.css
+++ b/static/main.css
@@ -268,7 +268,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-  transform: translateX(24px) translateY(-50%);
+  transform: translateX(22px) translateY(-50%);
   content: "🌙";
   background-color: var(--blue);
 }
